--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ description: '每個人都會新增一個資料夾'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 baseurl: ''
-disqus: 'demowebsite'
-email: 'wowthemesnet@gmail.com'
+disqus: 'addnewfolder-com'
+email: 'proaben@hotmail.com'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 
 include: ["_pages"]
@@ -22,7 +22,7 @@ authors:
     sal:
       name:           Sal
       site:           https://www.wowthemes.net
-      avatar:         /assets/images/avatar1.jpg
+      avatar:         assets/images/avatar1.jpg
       bio:            "Hi, I am Sal, the author of Mundana, the theme you're currently previewing. I hope you like it!"
       email:          wowthemesnet@gmail.com
       twitter:        https://twitter.com/wowthemesnet
@@ -30,10 +30,18 @@ authors:
     jane:
       name:           Jane
       site:           https://www.wowthemes.net
-      avatar:         /assets/images/avatar2.jpg
+      avatar:         assets/images/avatar2.jpg
       bio:            "Blogger, fashionista, love to explore new ideas and write on my morning coffee!"
       email:          fakemail@gmail.com
       twitter:        https://twitter.com/wowthemesnet
+
+    sherlock:
+      name:           Sherlock
+      site:           https://www.addnewfolder.com
+      avatar:         assets/images/avatar_sherlock.jpg
+      bio:            "攝影，程式，產品管理，UX，數據分析，AI"
+      email:          proaben@hotmail.com
+      twitter:        https://twitter.com/twsherlock
  
 # Defaults
 defaults:
@@ -43,8 +51,8 @@ defaults:
       path: "_posts"
     values:
       layout: post
-      author: sal
-      avatar: /assets/images/avatar1.jpg
+      author: sherlock
+      avatar: /assets/images/avatar_sherlock.jpg
       
   # all pages
   - scope:
