--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ favicon: 'assets/images/favicon.ico'
 baseurl: ''
 disqus: 'addnewfolder-com'
 email: 'proaben@hotmail.com'
+formspreeid: 'xayrdgpb'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 
 include: ["_pages"]
@@ -65,7 +66,7 @@ markdown: kramdown
 highlighter: rouge
 
 # Paginate
-paginate: 10
+paginate: 20
 
 
 
